reorganized figures in cuts_corrections section, TODO: unfolding section

--- a/jet_calibration.tex
+++ b/jet_calibration.tex
@@ -5,7 +5,7 @@ Thus the energy response of the calorimeter for these components is different (t
 These take into account features of the detector, the reconstruction algorithm, and jet fragmentation and include the following \cite{Aad:2014bia}:
 \subparagraph{Origin Correction: } This correction ensures that jets point back to the primary vertex and not the nominal center of the detector.
 \subparagraph{MC based Calibration: } This is a MC based correction that depends on the comparison between the energy and pseudorapidity of the reconstructed jet and the corresponding matched truth jet.
-\subparagraph{\textit{In situ}+Cross Calibration: } This calibration is based on the differences between data and MC as described by a well-measured object like a photon or Z boson.
+\subparagraph{\textit{In situ}+Cross Calibration: } This calibration is based on the differences between data and MC as described by a well-measured object like a photon or Z boson \cite{cc2015, HIjesnote}.
 This poses a challenge for heavy ion collisions because unlike in \pp\ collisions, there simply aren't enough statistics for these objects.
 Here the cross-calibration procedure accounts for differences in the jet reconstruction procedure in heavy ion collisions and \pp\ collisions, and enables the usage of the \insitu\ corrections from \pp\ collisions.
 
@@ -43,14 +43,14 @@ The $\eta$ and $\phi$ position resolution of the jet can be derived via a simila
 \centering
 \begin{subfigure}{.45\textwidth}
   \centering
-  \includegraphics[width=\linewidth]{figures/setup/jet_res_eta_r04.pdf}}
+  \includegraphics[width=\linewidth]{figures/setup/jet_res_eta_r04.pdf}
           \caption{}
           \label{fig:nch_fcal}
 \end{subfigure}
 \qquad  \qquad  
 \begin{subfigure}{.45\textwidth}  
   \centering
-  \includegraphics[width=\linewidth]{figures/setup/jet_res_phi_r04.pdf}}
+  \includegraphics[width=\linewidth]{figures/setup/jet_res_phi_r04.pdf}
           \caption{}
           \label{fig:fcal_distr}
 \end{subfigure}
