--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -1,5 +1,16 @@
 % !TEX root = thesis-ex.tex
 % !TEX encoding = UTF-8 Unicode
+@techreport{Sickles:2235420,
+      author        = "Sickles, Anne Marie and Puri, Akshat and Rybar, Martin",
+      title         = "{Jet Fragmentation in Pb+Pb Collisions at 5.02 TeV}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATL-COM-PHYS-2016-1721",
+      month         = "Nov",
+      year          = "2016",
+      reportNumber  = "ATL-COM-PHYS-2016-1721",
+      url           = "https://cds.cern.ch/record/2235420",
+}
 
 @techreport{Cole:1450219,
 author        = "Cole, B and Spousta, M and Angerami, A and Kosek, T and
